# pytest-autotgen

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
pytest-autotgen/: __init__.py  pytgen.py
tests/: example_test.py
