[metadata]
name = pytest-autotgen
version = 1.0.1
author = Sid Teymurian
author_email = <taymurian@gmail.com>
url = https://github.com/taymurian/pytest-autogen
description = A Data-driven Pytest automated test generator
long_description_content_type = text/markdown
keywords =
    python
    pytest
    automation
    test
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Framework :: Pytest
    Operating System :: OS Independent
;    Operating System :: Unix
;    Operating System :: POSIX :: Linux
;    Operating System :: MacOS :: MacOS X
;    Operating System :: Microsoft :: Windows
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Code Generators

[options]
packages = find:
install_requires = wheel>=0.37;pytest>=7.0
python_requires = >=3.10

[options.packages.find]
exclude =
    testing*
    auto_*

[options.extras_require]
dev =
    pytest>=7.0
    twine>=4.0.2
    wheel>=0.37
;testing =
;    pytest
;    argcomplete
;    mock
;    nose
;    request
;    hypothesis
;
;[bdist_wheel]
;universal = True
